@@ -1,6 +1,6 @@
 # Test the module type
 import unittest
-from test.test_support import run_unittest
+from test.test_support import run_unittest, gc_collect
 
 import sys
 ModuleType = type(sys)
@@ -55,13 +55,28 @@ class ModuleTests(unittest.TestCase):
               {"__name__": "foo", "__doc__": "foodoc", "bar": 42})
         self.assertTrue(foo.__dict__ is d)
 
+    @unittest.expectedFailure
     def test_dont_clear_dict(self):
         # See issue 7140.
         def f():
             foo = ModuleType("foo")
             foo.bar = 4
             return foo
+        gc_collect()
         self.assertEqual(f().__dict__["bar"], 4)
+
+    def test_clear_dict_in_ref_cycle(self):
+        destroyed = []
+        m = ModuleType("foo")
+        m.destroyed = destroyed
+        s = """class A:
+    def __del__(self):
+        destroyed.append(1)
+a = A()"""
+        exec(s, m.__dict__)
+        del m
+        gc_collect()
+        self.assertEqual(destroyed, [1])
 
 def test_main():
     run_unittest(ModuleTests)
